--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -110,13 +110,10 @@
 }
 
 @book{fourier,
-   title =     {The Fourier Transform and Its Applications},
-   author =    {Ronald Bracewell},
-   publisher = {McGraw Hill},
-   year =      {2000},
-   series =    {McGraw-Hill series in electrical and computer engineering. Circuits and systems},
-   edition =   {3rd ed},
-}
+   title =     {Fourier analysis and its applications},
+   author =    {Gerald B. Folland},
+   year =      {1992},
+  }
 
 @book{axqft,
    title =     {Introduction to Axiomatic Quantum Field Theory},
