--- a/tesi/sections/1/2.tex
+++ b/tesi/sections/1/2.tex
@@ -9,7 +9,7 @@
     \begin{defn}
         \label{def:1:2:1}
         Let $\mc{V}$ be a finite set, we define an \ii{abstract simplicial complex} $\mc{A}$ to be 
-        a family of non empy subsets of $\mc{V}$ such that:
+        a family of non empty subsets of $\mc{V}$ such that:
         \begin{enumerate}[(i)]
             \item if $v \in \mc{V}$, then $\{v\} \in \mc{A},$
             \item if $\sigma \in \mc{A}$ and $\tau \subset \sigma$, then $\tau \in \mc{A}.$
@@ -37,7 +37,7 @@
     \hfill \\
     Both for abstract and geometric simplicial complexes one can define maps called \ii{simplicial maps}. We obtain a category whose
     equivalences are called isomorphisms. 
-    % The geometric realisation is unluckily not a functor on the whole category of abstract simplicial complexes due to the
+    % The geometric realization is unluckily not a functor on the whole category of abstract simplicial complexes due to the
     % limitation imposed by \autoref{thm:2}. Nevertheless, when they exist, the geometric realizations of isomorphic abstract simplicial complexes are theirselves isomorphic.
     A short discussion of category theory can be found in Appendix \autoref{app:A}.\\
     \hfill \\
