--- a/tesi/sections/1/3.tex
+++ b/tesi/sections/1/3.tex
@@ -14,7 +14,7 @@
         Let $\mc{A}$ be a simplicial complex, we define the \ii{group of p-chains} 
         \[ \mc{C}_p(\mc{A},\R) := \{ \sum_{i \in I} \lambda_i \{\sigma_i\} : \lambda_i \in \R \}.\]
     \end{defn}
-
+    \footnote{Actually on any chain complex.}
     In the definition\autoref{chaingroup} the sum $\sum_{i \in I} \lambda_i \{\sigma_i\}$ is the formal sum of the free abelian group on $\R$, see \cite{lang} at 1.7.
     This can be generalized from $\R$ to an arbitrary abelian group, nevertheless, for the most of the applications, the groups $\Z,\R,\Z_2$ are considered. 
 
