--- a/tesi/sections/1/4.tex
+++ b/tesi/sections/1/4.tex
@@ -14,7 +14,7 @@
     \end{prop}
 
     \begin{prop}
-        The homomorphims $\{\cc{\sigma_i}:C_p \to \R\}$ such that $\braket{\sigma_i}{\sigma_j} =: \cc{\sigma_i}(\ch{\sigma_j}) = \delta_{ij}$,
+        The homomorphisms $\{\cc{\sigma_i}:C_p \to \R\}$ such that $\braket{\sigma_i}{\sigma_j} =: \cc{\sigma_i}(\ch{\sigma_j}) = \delta_{ij}$,
         form a basis of $C^p$.
     \end{prop}
 
@@ -24,7 +24,7 @@
     \begin{defn}
         \label{dualrel}
         The dual of the boundary maps which we shall call
-        \ii{coboundary maps}, is the group homomorphsm defined by
+        \ii{coboundary maps}, is the group homomorphism defined by
         \[ d_{p+1} : C^p \to C^{p+1} \quad d_{p+1}\cc{\sigma} := \cc{\sigma} \del_{p+1} \quad \forall \cc{\sigma} \in C^p.\]
         Therefore $d_{p+1}\cc{\sigma}(\ch{\tau}) = \cc{\sigma} (\del_{p+1}\ch{\tau}) \quad \forall \ch{\tau} \in C_p$.
     \end{defn}
