--- a/tesi/sections/2/1.tex
+++ b/tesi/sections/2/1.tex
@@ -29,7 +29,7 @@
     on graphs can be found in \cite{bondy}.
 
     \begin{defn}
-        An \ii{undirected graph} $\mc{G}$ is an orderd pair $(V(\mc{G}),E(\mc{G}))$, consisting of a set $V(\mc{G})$ of \ii{vertices}
+        An \ii{undirected graph} $\mc{G}$ is an ordered pair $(V(\mc{G}),E(\mc{G}))$, consisting of a set $V(\mc{G})$ of \ii{vertices}
         and a set $E(\mc{G})$, disjoint from $V(\mc{G})$, of \ii{edges}, together with an incidence function
         $\psi_\mc{G}:E(\mc{G}) \to V(\mc{G}) \times V(\mc{G})$ that associates to each edge of $\mc{G}$ an unordered pair of (not necessarily
         distinct) vertices of $\mc{G}$. If $e$ is an edge and $u$ and $v$ are vertices such that $\psi_\mc{G}(e) =
@@ -55,7 +55,7 @@
     \end{rem}
 
     \begin{defn}
-        A graph is \ii{simple} if it has neither different edges connecting the same pair of verices nor loops, i.e. there is a unique edge joining two different vertices
+        A graph is \ii{simple} if it has neither different edges connecting the same pair of vertices nor loops, i.e. there is a unique edge joining two different vertices
         and no vertex is joined to itself by an edge. This implies $a_{ii} = 0$ in the adjacency matrix.
     \end{defn}
     
