--- a/tesi/sections/2/4.tex
+++ b/tesi/sections/2/4.tex
@@ -13,7 +13,7 @@ Let's first define the laplacian for smooth functions from $\R^n$ to $\R$.
 The laplacian eigenfunctions, i.e. functions $f: \R^n \to \R$ such that $\Delta f = \lambda f$ with $\lambda \in \R$ , are the solution of a constrained variational problem for an action called \ii{Dirichlet energy}, as shown in \cite{bronstein}.
 
 \begin{defn}
-    Let $f:\R^n \to \R$ be a smooth funcion with compact support, we define the \ii{Dirichlet energy functional} to be
+    Let $f:\R^n \to \R$ be a smooth function with compact support, we define the \ii{Dirichlet energy functional} to be
     \[ D[f] := \int_{\R^n} dx |\nabla f|^2 .\]
 \end{defn}
 
