--- a/tesi/sections/3/4.tex
+++ b/tesi/sections/3/4.tex
@@ -29,7 +29,7 @@
     This means that $f$ depends on $\phi$ through the $G$-average.
     In the case of images with the translation group this would imply that $f$ only depends on the average $RGB$ value of the image.
     Linear invariants are therefore really limited, linear equivariants are a bigger family of operators that allows the network to reach a good approximation
-    power.{\color{red} Quest'ultima frase è un po' mistica ma anche quello che hanno scritto loro per me è impossibile da interpretare.}
+    power.
     
     Here we are not giving a recipe for an architecture, we are rather listing the necessary conditions for the network to behave well w.r.t. the symmetries.
 
