--- a/tesi/sections/appendixA/main.tex
+++ b/tesi/sections/appendixA/main.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
     In this appendix we review few notions of category theory.
-    This theory is very useful to stduy homology and cohomology theory, however in this thesis we employ this language only marginally.
+    This theory is very useful to study homology and cohomology theory, however in this thesis we employ this language only marginally.
     We refer the reader to \cite{mclane} for a full account of category theory.
 
     \begin{defn}
