--- a/tesi/sections/2/3.tex
+++ b/tesi/sections/2/3.tex
@@ -14,7 +14,7 @@
         \label{lapdef}
     \end{defn}
 
-    One interesting propertiy of the $0$-laplacian is that the dimension of its kernel equals the number of connected components of the graph.This is the Eckmann's theorem for $0$-chains, for a proof see appendix \ref{app:C}.
+    One interesting property of the $0$-laplacian is that the dimension of its kernel equals the number of connected components of the graph.This is the Eckmann's theorem for $0$-chains, for a proof see appendix \ref{app:C}.
     We see an example. To illustrate some of the properties of graphs we will refer to the graph in fig. \ref{fig:2:3}. 
     \begin{figure}[H]
         \begin{minipage}{.5\textwidth}
