--- a/tesi/sections/3/1.tex
+++ b/tesi/sections/3/1.tex
@@ -77,8 +77,7 @@
     of this chapter. This matrix being circulant is also an important constraint on the number of independent components, this reflects the compact support of the filter.
     This might look as a pragmatic solution but it also tells us some truth about the symmetries of the task.
     In some cases the classification of a signal, e.g. voice recognition, is independent of the time when the signal was recorded,
-    we can say that the classification is invariant under translations of the signal over time. {\color{red}This is reflected in the fact that if we 
-    shift the whole cyclic group the matrix representing the convolution will still be circulant.}
+    we can say that the classification is invariant under translations of the signal over time. 
     At this point, we could see our filter as a function defined on the cyclic group itself, rather than a filter whose symmetry group is the cyclic group.
     This subtle distinction allowed M. Welling and T. S. Cohen to define in \cite{gcnn} a group equivariant convolution on an arbitrary group.
     
