--- a/tesi/sections/3/4.tex
+++ b/tesi/sections/3/4.tex
@@ -29,7 +29,7 @@
     % This means that $f$ depends on $\phi$ through the $G$-average.
     % In the case of images with the translation group this would imply that $f$ only depends on the average $RGB$ value of the image.}
     Linear invariants are really limited, linear equivariants are a bigger family of operators that allows the network to reach a good approximation
-    power. A brief explanation of the limitedness of linear invariant can be found in \cite{2021geo} at $3.5$.
+    power. A brief explanation of the limitedness of linear invariants can be found in \cite{2021geo} at $3.5$.
     
     Here we are not giving a recipe for an architecture, we are rather listing the necessary conditions for the network to behave well w.r.t. the symmetries.
 
