--- a/tesi/sections/2/5.tex
+++ b/tesi/sections/2/5.tex
@@ -51,7 +51,7 @@ we derive the following proposition.
 Since according to Eckmann's theorem the dimension of the kernel of the $0$-laplacian for a simple connected graph is one, 
 we have that $\sum_{C_0} \ch{i}$ is the only linearly independent chain in the kernel, therefore the unique $0$-laplacian eigenfunction
 with eigenvalue zero up to scalar multiplication. Since the coefficients in the formal sum of the basis $0$-chains are all equal, we have that the $0$-laplacian eigenchain
-of a simple undirected connected graph is always uniform as in fig. \ref{fig:2:5}.\\
+with eigenvalue zero of a simple undirected connected graph is always uniform.\\
 \hfill \\
 
 The minimization of the discrete Dirichlet energy is not a variational problem, rather a simple minimization in $\Phi$ in which we can 
