--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -42,7 +42,7 @@
         \[ \sum_{i \in I \m \{0\}} \mu_i (x_0 - x_i) = (x_0 - x_j) \sum_{i \in I \m \{0\}} \mu_i + \sum_{i \in I \m \{0\}} \mu_i (x_j - x_i) = 0.\]
         If we define $\mu_0 := -\sum_{i \in I \m \{0\}} \mu_i$ we have that
         \[ 0 = \sum_{i \in I} \mu_i (x_j - x_i) = \sum_{i \in I \m \{j\}} \mu_i (x_j - x_i) \then \mu_i = 0 \quad \forall i \in I \m \{j\},\]
-        which proves our proposition. the definition of affine ind the definition of affine independence is well stated. \qedhere
+        which proves our proposition. \qedhere
     \end{proof}
 
     \begin{defn}
