--- a/tesi/sections/1/4.tex
+++ b/tesi/sections/1/4.tex
@@ -34,8 +34,8 @@
     \begin{defn}
         We define the \ii{p-cohomology group} to be 
         \[H^p := \frac{\ker d_{p+1}}{\im d_{p}},\] 
-        where $\im d_{p-1}$ is the group of simplicial p-cocycles and
-        $\ker d_p$ is the group of simplicial p-coboundaries.
+        where $\im d_{p-1}$ is the group of simplicial \ii{p-cocycles} and
+        $\ker d_p$ is the group of simplicial \ii{p-coboundaries}.
     \end{defn}
 
     % To have a specular intuition of what the coboundary operator actually does, we equipe our simplicial chain groups with
