--- a/tesi/sections/2/3.tex
+++ b/tesi/sections/2/3.tex
@@ -14,7 +14,7 @@
         \label{lapdef}
     \end{defn}
 
-    One interesting property of the $0$-laplacian is that the dimension of its kernel equals the number of connected components of the graph.This is the Eckmann's theorem for $0$-chains, for a proof see appendix \ref{app:C}.
+    One interesting property of the $0$-laplacian is that the dimension of its kernel equals the number of connected components of the graph.This is Eckmann's theorem for $0$-chains, for a proof see appendix \ref{app:C}.
     We see an example. To illustrate some of the properties of graphs we will refer to the graph in fig. \ref{fig:2:3}. 
     \begin{figure}[H]
         \begin{minipage}{.5\textwidth}
@@ -117,7 +117,7 @@
     \end{defn}
 
     One interesting property of the $1$-laplacian is that the dimension of its kernel equals the number of independent cycles.
-    This, again, is the Eckmann's theorem this time for $1$-chains.
+    This, again, is Eckmann's theorem this time for $1$-chains.
 
     \begin{exa}
         In fact we can expand $\Delta_1^\mc{A} := \del_1^\dagger\del_1$ the basis $\{\ket{1,2},\ket{2,3},\ket{3,1}\}$ as
