--- a/tesi/sections/2.tex
+++ b/tesi/sections/2.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
     An important branch of geometric deep learning is graph representation learning. In this section we will therefore
-    introduce graphs and graphs laplacians to build a mathematical background for graph neural networks. 
+    introduce graphs and graph laplacians to build a mathematical background for graph neural networks. 
     \begin{section}{Definition of Graph}
         \subfile{sections/2/1}   
     \end{section}
